WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159026
Media controls stop working after exiting PiP
https://bugs.webkit.org/show_bug.cgi?id=159026
Summary
Media controls stop working after exiting PiP
Jer Noble
Reported
2016-06-22 10:08:07 PDT
Media controls stop working after exiting PiP
Attachments
Patch
(3.21 KB, patch)
2016-06-22 10:11 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-06-22 10:11:13 PDT
Created
attachment 281848
[details]
Patch
Jer Noble
Comment 2
2016-06-22 10:11:41 PDT
<
rdar://problem/26753579
>
Jer Noble
Comment 3
2016-06-22 10:16:40 PDT
Comment on
attachment 281848
[details]
Patch Clearing flags on attachment: 281848 Committed
r202333
: <
http://trac.webkit.org/changeset/202333
>
Jer Noble
Comment 4
2016-06-22 10:16:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug