Media controls stop working after exiting PiP https://bugs.webkit.org/show_bug.cgi?id=159026 <rdar://problem/26753579>

Reviewed by Eric Carlson.

Do not slave setting WebVideoFullscreenModelVideoElement::setVideoElement() to
WebPlaybackSessionModelVideoElement::setMediaElement(). After all, someone else
(i.e., the media controls) may still be using it.

* platform/cocoa/WebVideoFullscreenModelVideoElement.mm:
(WebVideoFullscreenModelVideoElement::setVideoElement): Deleted.
* platform/ios/WebVideoFullscreenControllerAVKit.mm:
(WebVideoFullscreenControllerContext::didCleanupFullscreen):
(WebVideoFullscreenControllerContext::setUpFullscreen):

Canonical link: https://commits.webkit.org/177100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202333 268f45cc-cd09-0410-ab3c-d52691b4dbfc